--- a/app/popup/public/index.html
+++ b/app/popup/public/index.html
@@ -25,7 +25,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
-    <title>Incognito SPL Token Assets</title>
+    <title>Incognito Extension</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
