add CSP validate

--- a/app/popup/public/index.html
+++ b/app/popup/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Incognito wallet with support for SPL tokens." />
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self' https://* ; style-src 'self' 'unsafe-inline';"
+      content="default-src 'self' data: https://* ; style-src 'self' 'unsafe-inline';"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
