change requestDevice page

--- a/assets/request-device.html
+++ b/assets/request-device.html
@@ -5,8 +5,8 @@
     <title>Chrome Addon v3: index.html</title>
 </head>
 <body>
-    This is the <span class="special-text">HTML</span> body of the addon.
-    <button id="requestDevice">requestDevice</button>
+    You need to connect your device to use it with Incognito Wallet
+    <button id="requestDevice">Connect</button>
     <script src="request-device-script.js"></script>
 </body>
 </html>
